...
  String get rejected_msg => 'تم الرفض';

  @override
  String get cancelled_msg => 'تم الإلغاء';

  @override
  String get home => 'الرئيسية';

  @override
  String get leavesTab => 'إجازات';

  @override
  String get requestsTab => 'طلبات';
...
